--- a/app/templates/posts.html
+++ b/app/templates/posts.html
@@ -8,6 +8,9 @@
 <div class="posts">
 	{% for post in wp_posts %}
 		<div class="post-title">{{ post.title }}</div>
+		<a href="{{ url_for('view_post', post_id=post.id) }}" class="view">View Post</a>
+		<a href="{{ url_for('edit_post', wp_post_id=post.id) }}" class="edit">Edit Post</a>
+		<a href="{{ url_for('delete_post', wp_post_id=post.id) }}" class="delete">Delete Post</a>
 	{% endfor %}
 </div>
 {% endblock %}
