--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -4,7 +4,7 @@
 	<form action="{{ url_for('wp_connect', state=STATE) }}" method="POST">
 		<input type="text" size="30" name="url">
 		<input type="text" size="30" name="username">
-		<input type="text" size="30" name="password" xhtml="password">
+		<input type="password" size="30" name="password" xhtml="password">
 		<button type="submit"><input type="submit" name="login">
 		Login</button>
 	</form>
