using json api instead of xml

--- a/app/templates/newpost.html
+++ b/app/templates/newpost.html
@@ -11,8 +11,8 @@
 				<dt>Content</dt>
 				<dd><input type="text" cols="50" rows="10" name="content"></dd>
 			</dl>
-			<p><button type="submit"><input type="hidden" name="publish"></button></p>
+			<p><button type="submit"><input type="submit" name="publish"></button></p>
 		</div>
 	</form>
 </div>
-{% endblock% }
+{% endblock %}
