registration function and form class

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,5 +6,8 @@
 	<div class="login">
 		<a href="{{ url_for('login', state=STATE) }}">Login</a>
 	</div>
+	<div class="register">
+		<a href="{{ url_for('register') }}">Register</a>
+	</div>
 </div>
 {% endblock %}
