--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 
 <div class="header-menu">
 	<div class="login">
-		<a href="{{ url_for('login', state=STATE) }}">Login</a>
+		<a href="{{ url_for('login', state=STATE) }}">Login.</a>
 	</div>
 </div>
 {% endblock %}
