--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
+	<script type="text/javascript" src="https://code.jquery.com/jquery.min.js"></script>
+	<script type="text/javascript" src="https://getbootstrap.com/dist/js/bootstrap.js"></script>
+	<link type="text/css" rel="stylesheet" href="https://getbootstrap.com/dist/css/bootstrap.css"/>
 	</head>
 
 	<body>
