--- a/app/templates/common/index.html
+++ b/app/templates/common/index.html
@@ -3,11 +3,17 @@
 <body>
 
 <div class="header-menu">
+	{% if current_user.is_authenticated %}
+	<div class="edit-user">
+		<a href="{{ url_for('user_profile', user_id=user.id) }}">
+		View Profile</a>
+	{% else %}
 	<div class="login">
 		<a href="{{ url_for('login', state=STATE) }}">Login</a>
 	</div>
 	<div class="register">
 		<a href="{{ url_for('register', token=token) }}">Register</a>
 	</div>
+	{% endif %}
 </div>
 {% endblock %}
