--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,13 +1,12 @@
 {% extends "main.html" %}
 {% block content %}
 <body>
-
 <div class="header-menu">
 	<div class="login">
-		<a href="{{ url_for('login', state=STATE) }}">Login</a>
+		<a href="{{ url_for('Login', state=STATE) }}">Login</a>
 	</div>
 	<div class="register">
-		<a href="{{ url_for('register', token=token) }}">Register</a>
+		<a href="{{ url_for('Register', token=token) }}">Register</a>
 	</div>
 </div>
 {% endblock %}
