--- a/app/templates/files/upload.html
+++ b/app/templates/files/upload.html
@@ -2,15 +2,17 @@
 {% block content %}
 
 <div class="image-upload">
-	<form action="{{ url_for('upload_image') }}" method="post">
+	<form action="{{ url_for('upload_image') }}" method="post"
+	 enctype="multipart/form-data">
 		{{ form.hidden_tag() }}
 		<p>
 			{{ form.image.label }}
-			{{ form.image(size=30) }}
+			{{ form.image }}
 			{% for error in form.image.errors %}
 				<span class="error">[{{ error }}]</span>
 			{% endfor %}
 		</p>
+		<p>{{ form.submit() }}</p>
 	</form>
 </div>
 
