--- a/app/templates/common/index.html
+++ b/app/templates/common/index.html
@@ -3,16 +3,18 @@
 <body>
 
 <div class="header-menu">
-	{% if 'user' in login_session %}
+	{% if user != None %}
 	<div class="edit-user">
 		<a href="{{ url_for('user_profile', user_id=user.id) }}">
 		View Profile</a>
-	{% endif %}
+	</div>
+	{% else %}
 	<div class="login">
 		<a href="{{ url_for('login', state=STATE) }}">Login</a>
 	</div>
 	<div class="register">
 		<a href="{{ url_for('register', token=token) }}">Register</a>
 	</div>
+	{% endif %}
 </div>
 {% endblock %}
