--- a/app/templates/common/index.html
+++ b/app/templates/common/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <div class="header-menu">
-	{% if not current_user.is_anonymous %}
+	{% if login_session['logged_in'] == True %}
 	<div class="edit-user">
 		<a href="{{ url_for('user_profile', user_id=current_user.id) }}">
 		View Profile</a>
