add login required decorators, remove debugging print statements:

--- a/app/templates/posts/posts.html
+++ b/app/templates/posts/posts.html
@@ -14,4 +14,7 @@
 <div class="new-post-link">
 	<a href="{{ url_for('new_post') }}" class="new">Write a new post</a>
 </div>
+<div class="home">
+	<a href="{{ url_for('index') }}">Home</a>
+</div>
 {% endblock %}
