--- a/app/templates/users/login.html
+++ b/app/templates/users/login.html
@@ -17,7 +17,7 @@
 				<span class="error">[{{error}}]</span>
 			{% endfor %}
 		</p>
-		<p>{{ form.submi() }}</p>
+		<p>{{ form.submit() }}</p>
 	</form>
 </div>
 
