--- a/app/templates/media/upload.html
+++ b/app/templates/media/upload.html
@@ -7,7 +7,7 @@
 		{{ form.hidden_tag() }}
 		<p>
 			{{ form.image.label }}
-			{{ form.image }}
+			{{ form.image() }}
 			{% for error in form.image.errors %}
 				<span class="error">[{{ error }}]</span>
 			{% endfor %}
